fixing some layout issues

--- a/src/css/app.less
+++ b/src/css/app.less
@@ -87,7 +87,8 @@
   .max-width-md-center();
 }
 
-#graphic-container {
+#graphic-container,
+#graphic-container-2 {
   .max-width-lg-center();
 }
 
